[gd_scene load_steps=4 format=3 uid="uid://bb0ribtvkv8ee"]

[ext_resource type="Script" path="res://Scripts/Dungeon/LevelManager.gd" id="1_8jrw7"]
[ext_resource type="TileSet" uid="uid://buuj5mjpbf174" path="res://Assets/Tileset/level_1_tileset.tres" id="2_kxygq"]
[ext_resource type="Script" path="res://Scripts/Dungeon/EditableTileMapManager.gd" id="3_58og7"]

[node name="GeneratedDungeon" type="Node2D"]
script = ExtResource("1_8jrw7")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_kxygq")
format = 2
script = ExtResource("3_58og7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(96, 96)
zoom = Vector2(3, 3)

[node name="LootList" type="Node" parent="."]

[node name="MonsterList" type="Node" parent="."]

[node name="AccessList" type="Node" parent="."]
